--- a/_layouts/single-news.html
+++ b/_layouts/single-news.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: 'test'
 ---
 <div class="single-news-content">
 	<header>
@@ -8,8 +9,21 @@ layout: default
 	  </div>
 	</header>
 	<div class="container news-content">
-    <h1>{{ page.titreEn }}</h1>
-    <p class="p_news">{{ page.texteLongEn | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
+    {% if site.lang == "fr" %}
+    <h1>{{page.titre}}</h1>
+		<p class="p_news">{{ page.texteLong | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
+		{% endif %}
+
+		{% if site.lang == "en" %}
+		<h1>{{page.titreEn}}</h1>
+		<p class="p_news">{{ page.texteLongEn | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
+		{% endif %}
+
+		{% if site.lang == "de" %}
+		<h1>{{page.titreDe}}</h1>
+		<p class="p_news">{{ page.texteLongDe | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
+		{% endif %}
+    
     <p class="news_date">
 		<time pubdate datetime="{{page.date | date_to_xmlschema}}" title="{{page.date | date_to_xmlschema | date: '%d.%m'}}">{{page.date | date_to_xmlschema | date: "%d.%m.%Y"}}</time>
 	</p>
